# MultiThreaded-TCP-Server-Client

./: .clang-format  .travis.yml  LICENSE  README.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.c  extract_ip_port_from_string.c  opt_arg.c  opt_arg.h
src/client/utils/: extract_ip_port_from_string.c  extract_ip_port_from_string.h  opt_arg.c
src/lib/: CMakeLists.txt  check_port.c  check_port.h  set_sockaddr_in.c  set_sockaddr_in.h
src/lib/thread_pool/: CMakeLists.txt  thpool.c  thpool.h
src/scripts/: build.sh  start_client.sh  start_server.sh
src/server/: CMakeLists.txt  opt_arg.c  opt_arg.h  server.c
src/server/utils/: check_tnum.c  check_tnum.h  factorial.c  factorial.h  opt_arg.c  opt_arg.h
src/utils/: mult_modulo.c  mult_modulo.h
